--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
-
+# Author: Gabriel Blanco
+# Version 1.0
+# Server and Port Config
+server.port=8080
+server.error.whitelabel.enabled=true
+server.error.path=/error
+# MySQL Config
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Production Environment
+spring.datasource.url=jdbc:mysql://3.129.14.18:3306/ubsrnominadb
+# Local Environment
+#spring.datasource.url=jdbc:mysql://localhost:3306/ubsrnominadb
+spring.datasource.username=usbrnomina
+spring.datasource.password=UsbrNombia*2021
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# PostgreSQL Config
+#spring.datasource.driver-class-name=org.postgresql.Driver
+# Production Environment
+#spring.datasource.url=jdbc:postgresql://3.129.14.18:5432/UBSRNOMINADB
+# Local Environment
+#spring.datasource.url=jdbc:postgresql://localhost:5432/UBSRNOMINADB
+#spring.datasource.username=usbrnomina
+#spring.datasource.password=UsbrNombia*2021
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Database and Hibernate Behaviour
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+# Logs
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
