Basic Stuff. Will remove spring security because there is a complication with the authentication | Gabriel Blanco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@
 server.port=8080
 server.error.whitelabel.enabled=true
 server.error.path=/error
+server.servlet.session.timeout=15m
+spring.security.user.name="admin"
+spring.security.user.password="123456aB!"
+spring.security.user.roles="ADMIN"
 # MySQL Config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Production Environment
